--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "grunt-noflo-browser": "^0.1.1",
     "grunt-bower-task": "^0.3.4"
   },
+  "scripts": {
+    "test": "grunt test"
+  },
   "keywords": []
 }
