More relaxed NoFlo version req

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "noflo": "~0.6.0"
+    "noflo": "0.x >= 0.5"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
@@ -31,5 +31,5 @@
   "scripts": {
     "test": "grunt test"
   },
-  "keywords": []
+  "keywords": ["noflo"]
 }
