--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "noflo": "0.x >= 0.5"
   },
   "devDependencies": {
-    "grunt": "~1.0.1",
-    "grunt-contrib-coffee": "~1.0.0",
-    "grunt-coffeelint": "~0.0.16",
-    "chai": "~3.5.0",
-    "mocha": "~3.2.0",
-    "grunt-mocha-phantomjs": "~4.0.0",
-    "grunt-contrib-uglify": "~2.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-coffeelint": "^0.0.16",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "grunt-mocha-phantomjs": "^4.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-noflo-manifest": "^0.1.12",
     "grunt-noflo-browser": "^1.0.1",
     "grunt-bower-task": "^0.4.0"
