--- a/package.json
+++ b/package.json
@@ -16,20 +16,25 @@
     "noflo": "0.x >= 0.5"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-coffee": "^1.0.0",
-    "grunt-coffeelint": "^0.0.16",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "grunt-mocha-phantomjs": "^4.0.0",
+    "coffee-loader": "^0.7.2",
+    "fbp-loader": "^0.1.1",
+    "grunt": "^1.0.1",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-coffeelint": "^0.0.16",
+    "grunt-contrib-coffee": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-noflo-manifest": "^0.1.12",
+    "grunt-mocha-phantomjs": "^4.0.0",
     "grunt-noflo-browser": "^1.0.1",
-    "grunt-bower-task": "^0.4.0"
+    "grunt-noflo-manifest": "^0.1.12",
+    "json-loader": "^0.5.4",
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "test": "grunt test"
   },
-  "keywords": ["noflo"]
+  "keywords": [
+    "noflo"
+  ]
 }
