--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "noflo": "0.x >= 0.5"
+    "noflo": "0.x >= 0.5",
+    "requirejs": "^2.3.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "coffee-loader": "^0.7.2",
     "fbp-loader": "^0.1.1",
     "grunt": "^1.0.1",
-    "grunt-bower-task": "^0.4.0",
     "grunt-coffeelint": "^0.0.16",
     "grunt-contrib-coffee": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
