--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "noflo": "1.0.0",
+    "noflo": "^1.0.0",
     "requirejs": "^2.3.2"
   },
   "devDependencies": {
